# proyecto_despliegue_de_modelos

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.dvc/: config
app/: api.py
data/: .gitignore  train_wo_outliers.csv.dvc
models/category_transformer/: MLmodel  conda.yaml  model.pkl  requirements.txt
models/model/: MLmodel  conda.yaml  model.json  requirements.txt
notebooks/: Combinación de modelos - Diego.ipynb  EDA.ipynb  Modelo Diego.ipynb  V1_AG_modelo.ipynb  V2_AG_modelo2.ipynb  baseline.ipynb  hyperparameter-tuning.ipynb
scripts/: experiment.py  preprocess_data_for_experiments.py
src/: data.py  experiments.py  logger.py  model.py  schema.py
tests/src/: test_data.py  test_model.py  test_schema.py
webapp/: Dockerfile  Manual_WebApp.md  README.md  index.html  metrics.html  modelo.html  script.js  styles.css  webApp.py
