[tool.poetry]
name = "proyecto despliegue de soluciones analiticas"
version = "0.1.0"
description = "ambiente usado para el proyecto de la materia despliegue de soluciones analiticas"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"


[tool.poetry.group.mlops.dependencies]
dvc = {extras = ["s3"], version = "^3.27.0"}
notebook = "^7.0.6"
mlflow = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
xgboost = "^2.0.1"
scikit-learn = "^1.3.2"
shap = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
