[tool.poetry]
name = "prediccion-precios-casas"
version = "0.1.0"
description = "ambiente usado para el proyecto de la materia despliegue de soluciones analiticas"
authors = [
    "Juan Ovalle <jj.ovalle@uniandes.edu.co>",
    "Diego Gomez <da.gomez15@uniandes.edu.co>",
    "Alejandra Gonzales <ma.gonzalez2489@uniandes.edu.co>",
    "Gabriel Bolanos <g.bolanos@uniandes.edu.co>"
]
readme = "README.md"
packages = [{include = "src"}]
repository = "https://github.com/jjovalle99/proyecto_despliegue_de_modelos"

[tool.poetry.dependencies]
python = "3.10.13"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
mlflow = "^2.7.1"
pydantic = "<2.0"
pandas = "^2.1.1"
numpy = "^1.26.1"
xgboost = "^2.0.1"

[tool.poetry.group.mlops.dependencies]
dvc = {extras = ["s3"], version = "^3.27.0"}


[tool.poetry.group.ml.dependencies]
notebook = "^7.0.6"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.2"
shap = "^0.43.0"
seaborn = "^0.13.0"
category-encoders = "^2.6.3"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"